--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.9.0
 colorama==0.4.6
 Django==5.2.4
+gunicorn==23.0.0
+packaging==25.0
 python-dotenv==1.1.1
 sqlparse==0.5.3
 tzdata==2025.2
